Copyright (c) 2003-2004 Infrae. All rights reserved.
See also LICENSE.txt
$Revision: 1.24 $

SilvaMetadata changes

   unreleased

     Bugs fixed

       - Stop using deprecated CMFCore.CMFCorePermissions module
 
       - Even more fixes to the unit tests (issue 1381).

   0.10

     Bugs fixed

       - Fixed unit tests (issue 1380).

   0.9

     Features added

       - Metadata sets can have a 'category' property. This property
         can be used to define special purpose metadata sets.

       - The minimal_role and category properties are exported and
         imported to/from the XML metadata set definitions.

     Bugs fixed

       - setValuesFromRequest now uses Formulator to validate
         user input. This solves the infamous 'checkbox' problem.

       - MetadataTool.setMetadataValues() has been removed.

       - XML export/import now works with latest Formulator release
         (fixing issues with Formulator's i18n support).

       - unit test have been updated to run with Silva

       - MetadataTool.getMetadataValue now supports object delegation.

   0.8

     Features added

       - Metadata Sets now have a Minimal Role property, that can be
         used by Silva to restrict access to a Set.

   0.7.6
  
     Bugs fixed

       - Make getMetadataValue shortcut a bit more robust. Also some
         performance tweaks.

   0.7.5

     Bugs fixed

       - XML import with unrecognized metadata sets now skips these
         sets silently.

       - XML export for integers and floats should now work properly
         when Python 2.1 is used.

       - Make SilvaMetadata field editing work with Formulator 1.6.0.

   0.7.4 

     Bugs fixed

        - XML import would fail with a NameError if a metadata set is
          imported that is not registered. Now it fails with a more
          informative error... What *should* be happening is that this
          unrecognized metadata is skipped, instead.

   0.7.3

     Features added
